# language_translater_crewai

./: README.md  pyproject.toml  report.md
src/language_translation/: crew.py  main.py
src/language_translation/config/: agents.yaml  tasks.yaml
